# MyRemoteControl_V2

./: .gitignore  CMakeLists.txt
client/include/console/: ConsoleClient.h
client/include/core/: RemoteClientCore.h
client/include/qt/: MainWindow.h  RemoteClientWorker.h  ScreenClientWorker.h
client/src/console/: ConsoleClient.cpp  main.cpp
client/src/core/: RemoteClientCore.cpp
client/src/qt/: MainWindow.cpp  RemoteClientWorker.cpp  ScreenClientWorker.cpp  qt_main.cpp
server/include/: ServerSession.h  ServerSessionContext.h
server/include/handlers/: CommandDispatcher.h  DriveHandler.h  FileHandler.h  InputHandler.h  ScreenHandler.h
server/include/net/: IocpServer.h
server/src/: ServerSession.cpp  main.cpp
server/src/handlers/: CommandDispatcher.cpp  DriveHandler.cpp  FileHandler.cpp  InputHandler.cpp  ScreenHandler.cpp
server/src/net/: IocpServer.cpp
shared/include/concurrency/: ThreadPool.h
shared/include/net/: SocketHelpers.h
shared/include/protocol/: BinaryReader.h  BinaryWriter.h  Command.h  Messages.h  PacketCodec.h  PacketHeader.h
shared/src/net/: SocketHelpers.cpp
shared/src/protocol/: BinaryReader.cpp  BinaryWriter.cpp  Messages.cpp  PacketCodec.cpp
tests/: BinaryReaderWriterTests.cpp  MessageSerializationTests.cpp  ThreadPoolFutureTests.cpp
